[gd_scene load_steps=7 format=3 uid="uid://beyb8lkk6laga"]

[ext_resource type="Script" uid="uid://57whlcydo0bl" path="res://Components/CatalogSystem/Card/Vinyl/vinyl_record.gd" id="1_fv3h4"]

[sub_resource type="Animation" id="Animation_vt8ul"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VinylPlate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, -0.000872665, 0, 1)

[sub_resource type="Animation" id="Animation_fv3h4"]
resource_name = "left_front"
length = 0.75
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VinylPlate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, -0.000872665, 0, 1, 0.75, 1, 0, 1, 0, 4.37114e-08)

[sub_resource type="Animation" id="Animation_hm1so"]
resource_name = "right_front"
length = 0.75
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VinylPlate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.000872665, 0, 1, 0.75, 1, 0, 1, 0, 0.000872687)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7hop2"]
_data = {
&"RESET": SubResource("Animation_vt8ul"),
&"left_front": SubResource("Animation_fv3h4"),
&"right_front": SubResource("Animation_hm1so")
}

[sub_resource type="QuadMesh" id="QuadMesh_tyft1"]
size = Vector2(1.2, 1.2)

[node name="VinylRecord" type="Node3D"]
script = ExtResource("1_fv3h4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7hop2")
}

[node name="VinylPlate" type="MeshInstance3D" parent="."]
transform = Transform3D(0.999998, 0, -0.00174533, 0, 1, 0, 0.00174533, 0, 0.999998, 0, 0, 0)

[node name="VinylFront" type="Sprite3D" parent="VinylPlate"]

[node name="VinylBack" type="Sprite3D" parent="VinylPlate"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.01)

[node name="VinylFrontSticker" type="MeshInstance3D" parent="VinylPlate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.006, 0)
visible = false
mesh = SubResource("QuadMesh_tyft1")

[node name="VinylBackSticker" type="MeshInstance3D" parent="VinylPlate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.006, 0)
visible = false
mesh = SubResource("QuadMesh_tyft1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.999962, 0, -0.00872654, 0, 1, 0, 0.00872654, 0, 0.999962, 0.00571346, 0, 1.2529)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.999962, 0, -0.00872654, 0, 1, 0, 0.00872654, 0, 0.999962, 0.00571346, -0.0973414, 0.000288034)
